# docker

./: .env-sample  Dockerfile  README.md  courses.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
courses/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_course_created_at_course_updated_at.py  0005_alter_course_created_at_alter_course_updated_at.py  0006_alter_lesson_course.py  0007_alter_lesson_options.py
data/: courses.json  users.json
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_date_of_payment.py  0004_subscriptions.py  0005_alter_subscriptions_user.py  0006_alter_payments_payment_amount_and_more.py  0007_payments_link_payments_session_id_and_more.py
